<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 * Created on February 15, 2012
 *
 * ============================================================================
 *
 * Copyright (c) 2012 Services And Technology Solutions Arcadia Consulting S.L.
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the
 * "Software"), to deal in the Software without restriction, including
 * without limitation the rights to use, copy, modify, merge, publish,
 * distribute, sublicense, and/or sell copies of the Software, and to
 * permit persons to whom the Software is furnished to do so, subject to
 * the following conditions:
 *
 * The above copyright notice, and every other copyright notice found in this
 * software, and all the attributions in every file, and this permission notice
 * shall be included in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED,INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL
 * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH
 * THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 *
 * ============================================================================
 *
 * <http://www.arcadiaconsulting.es>
 * @author Carlos Pérez Horga (carlos@arcadiaconsulting.es)
 *
 */ 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/LinearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/leftMargin"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/linearlayout" />
    <Button
        android:id="@+id/LinearLayoutLandscapeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/leftMargin"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/LinearLayoutLandscape" />
    <Button
        android:id="@+id/RelativeLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/leftMargin"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/rekative_layout" />
    <Button
        android:id="@+id/TableLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/leftMargin"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/tableLayout" />
    <Button
        android:id="@+id/FrameLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/leftMargin"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/frameLayout" />
    <Button
        android:id="@+id/GridLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/leftMargin"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/gridLayout" />

</LinearLayout>